# engineering_practices

./: README.md
hw1/: README.md  pyproject.toml
hw1/hw1/: Task_1.py
hw2/: README.md  hw3_task.ipynb  task.py
